--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  /* overflow-x: hidden; */
   font-family: 'Livvic', sans-serif;
 }
 :root{
@@ -266,7 +267,7 @@ body {
   font-size: 48px;
   line-height: 48px;
   color: #012F34;
-  margin-left: 94px;
+  margin-left: 98px;
 }
 .aside__btnbox{
   display: flex;
@@ -281,4 +282,58 @@ body {
 .aside__btn:hover{
   color: #fff;
   background-color: var(--bg-color2);
+}
+
+
+.footer{
+  padding: 48px 0;
+  background-color: var(--bg-color3);
+}
+.footer__link{
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+  text-decoration: none;
+  color: #FFFFFF;
+  transition: all 0.4s ease;
+}
+.footer__item:nth-child(1){
+  margin-right: 40px;
+}
+.footer__item:hover .footer__link{
+  color: var(--primary-color);
+}
+.footer__contentbox:nth-child(3) p{
+  text-align: right;
+}
+.footer__contentbox:nth-child(2){
+  flex-grow: 1;
+}
+.footer__contentbox:nth-child(1){
+  margin-right: 125px;
+}
+.footer__logolink{
+  margin-bottom: 25px;
+}
+.footer__sociallist{
+  margin-bottom: 51px;
+}
+.footer__text{
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 25px;
+  color: #FFFFFF;
+  mix-blend-mode: normal;
+  opacity: 0.6;
+}
+.footer__socialitem:not(:last-child){
+  margin-right: 16px;
+}
+.footer__socialitem a i{
+  color: #fff;
+  font-size: 24px;
+  transition: all 0.4s ease;
+}
+.footer__socialitem:hover a i{
+  color: var(--primary-color);
 }
