--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 :root{
   --bg-color1: #014e56;
   --bg-color2:  #012f34;
+  --bg-color3: #002529;
   --text-color: #fff;
   --primary-color:#f67e7e;
 }
@@ -32,4 +33,171 @@ body {
   line-height: 28px;
   border-radius: 24px;
 }
+
+/* Delivery--section */
+
+.bigbox {
+  width: 100vw;
+  height: 100vh;
+  background-color: #004047; 
+  padding-top: 140px;
+  background-image: url('../images/background-img-2.svg') ;
+  background-repeat: no-repeat;
+}
+
+.back {
+  background-image: url('../images/background-img-1.svg');
+}
+
+.delivery__desc-box {
+  margin-bottom: 50px;
+}
+
+.delivery__title {
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 48px;
+  text-align: center;
+  color: var(--text-color);
+  margin-bottom: 56px;
+}
+
+.delivery__span {
+  color: #79cbc7;
+}
+
+.delivery__items {
+  width: 350px;
+  padding-top: 30px;
+  background-image: url('../images/mark.svg');
+  background-repeat: no-repeat;
+  background-position: top  center;
+}
+
+.delivery__list {
+  list-style: none;
+}
+
+.delivery__text {
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: var(--text-color);
+  margin-bottom: 24px;
+}
+
+.delivery__name {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  color: #79c8c7;
+  margin-bottom: 2px;
+}
+
+.delivery__job {
+  font-size: 13px;
+  line-height: 18px;
+  text-align: center;
+  color: var(--text-color);
+  margin-bottom: 30px;
+}
+
+/* Aside--box */
+
+.aside {
+  padding: 76px 0;
+  background-color: var(--primary-color);
+  background-image: url('../images/aside-img.svg');
+  background-size: 200px 144px;
+  background-repeat: no-repeat;
+  background-position: bottom left;
+}
+.aside__title {
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 48px;
+  color: var(--bg-color2);
+  margin-left: 98px;
+}
+
+.aside__btnbox {
+  display: flex;
+  justify-content: center;
+}
+
+.aside__btn{
+  border: 2px solid var(--bg-color2);
+  color: var(--bg-color2);
+  background-color: transparent;
+  text-decoration: none;
+}
+
+.aside__btn:hover{
+  color: var(--text-color);
+  background-color: var(--bg-color2);
+}
+
+/* Footer-box */
+
+.footer {
+  padding: 48px 0;
+  background-color: var(--bg-color3);
+}
+
+.footer__link {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+  text-decoration: none;
+  color: var(--text-color);
+  transition: all 0.4s ease;
+}
+
+.ul {
+  list-style: none;
+}
+
+.footer__item:nth-child(1){
+  margin-right: 40px;
+}
+.footer__item:hover .footer__link{
+  color: var(--primary-color);
+}
+.footer__contentbox:nth-child(3) p{
+  text-align: right;
+}
+.footer__contentbox:nth-child(2){
+  flex-grow: 1;
+}
+.footer__contentbox:nth-child(1){
+  margin-right: 125px;
+}
+.footer__logolink{
+  margin-bottom: 25px;
+}
+.footer__sociallist{
+  margin-bottom: 51px;
+}
+.footer__text{
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 25px;
+  color: var(--text-color);
+  mix-blend-mode: normal;
+  opacity: 0.6;
+}
+.footer__socialitem:not(:last-child){
+  margin-right: 16px;
+}
+.footer__socialitem a i {
+  color: var(--text-color);
+  font-size: 24px;
+  transition: all 0.4s ease;
+}
+.footer__socialitem:hover a i {
+  color: var(--primary-color);
+}
+
 
